Ajout d'html switch 1

--- a/google.html
+++ b/google.html
@@ -9,8 +9,10 @@
     <body>
     	<img src="logo.png" alt = "logo Google" />
     	<form>
-   		<p>Texte à l'intérieur du formulaire</p>
+   		<input type="text" />
 		</form>
+		<button type="button">Recherche Google</button>
+		<button type="button">J'ai de la chance</button>
 
     </body>
 </html>
