Ajout de CSS switch 3

--- a/google.html
+++ b/google.html
@@ -12,14 +12,14 @@
     	<ul class="navHeader">
     		<li>Gmail</li>
     		<li>Images</li>
-    		<li><img src="images/pad.png" alt="petit pad" /></li>
-    		<li><button type="button">Connexion</button></li>
+    		<li><img src="images/pad.png" alt="petit pad" class="pad" title="Applications Google"/></li>
+    		<li><button type="button" class="connexion">Connexion</button></li>
     	</ul>
 
     </header>
 
     <body>
-
+    <div class="bdy">
     	<img src="images/logo.png" alt = "logo Google" />
 
     	<form>
@@ -30,7 +30,7 @@
 		<button type="button">J'ai de la chance</button>
 
 		<p>Google disponible en : <a href="">Indonesia</a> <a href="">English</a> <a href="">Basa Jawa</a> <a href="">Basa Bali</a></p>
-
+	</div>
     </body>
 
     <footer>
