Ajout de CSS switch final

--- a/google.html
+++ b/google.html
@@ -4,14 +4,15 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" href="images/favicon.png" />
         <title>Google</title>
     </head>
 
     <header>
     	
     	<ul class="navHeader">
-    		<li>Gmail</li>
-    		<li>Images</li>
+    		<li><a href ="">Gmail</a></li>
+    		<li><a href ="">Images</a></li>
     		<li><img src="images/pad.png" alt="petit pad" class="pad" title="Applications Google"/></li>
     		<li><button type="button" class="connexion">Connexion</button></li>
     	</ul>
@@ -29,7 +30,7 @@
 		<button type="button" class="boutton">Recherche Google</button>
 		<button type="button" class="boutton">J'ai de la chance</button>
 
-		<p>Google disponible en : <a href="">Indonesia</a> <a href="">English</a> <a href="">Basa Jawa</a> <a href="">Basa Bali</a></p>
+		<p>Google disponible en :<span class="links"><a href="http://www.google.com">Indonesia</a> <a href="http://www.google.com">English</a> <a href="http://www.google.com">Basa Jawa</a> <a href="http://www.google.com">Basa Bali</a></span></p>
 	</div>
     </body>
 
@@ -39,17 +40,18 @@
 
     	<ul class="navFooter">
     		<div class="navFooterGauche">
-    			<li>Publicité</li>
-    			<li>Entreprise</li>
-    			<li>A propos</li>
+    			<li><a href ="">Publicité</a></li>
+    			<li><a href ="">Entreprise</a></li>
+    			<li><a href ="">A propos</a></li>
     		</div>
     		<div class="navFooterDroite">
-    			<li>Confidentialité</li>
-    			<li>Conditions</li>
-    			<li>Paramètres</li>
-    			<li>Utiliser Google.com</li>
+    			<li><a href ="">Confidentialité</a></li>
+    			<li><a href ="">Conditions</a></li>
+    			<li><a href ="">Paramètres</a></li>
+    			<li><a href ="">Utiliser Google.com</a></li>
     		</div>
     	</ul>
 
     </footer>
+   
 </html>
