fin du html switch 2

--- a/google.html
+++ b/google.html
@@ -6,13 +6,50 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>Google</title>
     </head>
+
+    <header>
+    	
+    	<ul class="navHeader">
+    		<li>Gmail</li>
+    		<li>Images</li>
+    		<li><img src="images/pad.png" alt="petit pad" /></li>
+    		<li><button type="button">Connexion</button></li>
+    	</ul>
+
+    </header>
+
     <body>
-    	<img src="logo.png" alt = "logo Google" />
+
+    	<img src="images/logo.png" alt = "logo Google" />
+
     	<form>
    		<input type="text" />
 		</form>
+
 		<button type="button">Recherche Google</button>
 		<button type="button">J'ai de la chance</button>
 
+		<p>Google disponible en : <a href="">Indonesia</a> <a href="">English</a> <a href="">Basa Jawa</a> <a href="">Basa Bali</a></p>
+
     </body>
+
+    <footer>
+    	
+    	<div class="indonesie">Indonésie</div>
+
+    	<ul class="navFooter">
+    		<div class="navFooterGauche">
+    			<li>Publicité</li>
+    			<li>Entreprise</li>
+    			<li>A propos</li>
+    		</div>
+    		<div class="navFooterDroite">
+    			<li>Confidentialité</li>
+    			<li>Conditions</li>
+    			<li>Paramètres</li>
+    			<li>Utiliser Google.com</li>
+    		</div>
+    	</ul>
+
+    </footer>
 </html>
