Edition css switch

--- a/google.html
+++ b/google.html
@@ -26,15 +26,15 @@
    		<input type="text" />
 		</form>
 
-		<button type="button">Recherche Google</button>
-		<button type="button">J'ai de la chance</button>
+		<button type="button" class="boutton">Recherche Google</button>
+		<button type="button" class="boutton">J'ai de la chance</button>
 
 		<p>Google disponible en : <a href="">Indonesia</a> <a href="">English</a> <a href="">Basa Jawa</a> <a href="">Basa Bali</a></p>
 	</div>
     </body>
 
     <footer>
-    	
+
     	<div class="indonesie">Indonésie</div>
 
     	<ul class="navFooter">
