ajout de main.js

--- a/google.html
+++ b/google.html
@@ -8,6 +8,8 @@
         <title>Google</title>
     </head>
 
+<!-- navbar du haut -->
+
     <header>
     	
     	<ul class="navHeader">
@@ -18,6 +20,8 @@
     	</ul>
 
     </header>
+
+<!-- bloc du milieu -->
 
     <body>
     <div class="bdy">
@@ -33,6 +37,8 @@
 		<p>Google disponible en :<span class="links"><a href="http://www.google.com">Indonesia</a> <a href="http://www.google.com">English</a> <a href="http://www.google.com">Basa Jawa</a> <a href="http://www.google.com">Basa Bali</a></span></p>
 	</div>
     </body>
+
+<!-- bloc du bas dont navbar -->
 
     <footer>
 
@@ -51,6 +57,8 @@
     			<li><a href ="">Utiliser Google.com</a></li>
     		</div>
     	</ul>
+
+    <script src="main.js"></script>
 
     </footer>
    
