la messe est dite

--- a/google.html
+++ b/google.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="images/favicon.png" />
         <title>Google</title>
+        
     </head>
 
 <!-- navbar du haut -->
@@ -18,24 +19,27 @@
     		<li><img src="images/pad.png" alt="petit pad" class="pad" title="Applications Google"/></li>
     		<li><button type="button" class="connexion">Connexion</button></li>
     	</ul>
-
     </header>
 
+    <button type="button" id="grosBoutton" onclick="exercice1()">AFFICHER LES ÉLÉMENTS CENTRAUX!</button>
 <!-- bloc du milieu -->
 
     <body>
     <div class="bdy">
-    	<img src="images/logo.png" alt = "logo Google" />
+    <div id="ex1">
+    	
+        <img src="images/logo.png" alt = "logo Google" />
 
     	<form>
-   		<input type="text" />
+   		<input type="text" id="saisie"/>
 		</form>
 
-		<button type="button" class="boutton">Recherche Google</button>
-		<button type="button" class="boutton">J'ai de la chance</button>
+		<button type="button" class="boutton" id="Google" onclick="recherche()">Recherche Google</button>
+		<button type="button" class="boutton" id="Chance" onclick="rechercheChance()">J'ai de la chance</button>
 
 		<p>Google disponible en :<span class="links"><a href="http://www.google.com">Indonesia</a> <a href="http://www.google.com">English</a> <a href="http://www.google.com">Basa Jawa</a> <a href="http://www.google.com">Basa Bali</a></span></p>
 	</div>
+    </div>
     </body>
 
 <!-- bloc du bas dont navbar -->
